--- a/indiv.html
+++ b/indiv.html
@@ -51,32 +51,34 @@ body {
   margin: 5px 2px;
   border-radius: 50%;
 }
-
 .fa:hover {
     opacity: 0.7;
 }
-
 .fa-facebook {
   background: #3B5998;
   color: white;
+float: right ;
+margin-top: -40px;
+margin-right: 100px;
 }
-
 .fa-twitter {
   background: #55ACEE;
   color: white;
+float: right ;
+margin-top: -40px;
+margin-right: 50px;
 }
 .fa-instagram {
   background: #125688;
   color: white;
+float: right;
+margin-top: -40px;
 }
 </style>
 </head>
 <body>
 <header style="margin-top: 0px";>
-<center><img src="d.PNG" width="400px" height="40px" alt"fashion">
-<img src="c.PNG" width="400px" height="40px" alt"fashion">
-<img src="b.PNG" width="360px" height="40px" alt"fashion">
-<img src="a.PNG" width="300px" height="40px" alt"fashion"></center>
+<center><img src="d.PNG" width="300px" height="40px" alt"fashion"></center>
 <table height="100px">
  <div class="topnav">
   <a class="active" href="#HOME">HOME</a>
@@ -88,9 +90,9 @@ body {
   <a class="active" href="#contact">CONTACT US</a>
 </div>
 <!-- Add font awesome icons -->
-<a href="#" class="fa fa-facebook"></a>
-<a href="#" class="fa fa-twitter"></a>
-<a href="#" class="fa fa-instagram"></a>
+<a href="https://www.facebook.com/joannastaiglesia.18" class="fa fa-facebook"></a>
+<a href="https://twitter.com/@thejoannaaa" class="fa fa-twitter"></a>
+<a href="https://www.instagram.com/_joannastaiglesia/" class="fa fa-instagram"></a>
 <div style="padding-left:16px">
 </div>
 </table>
