--- a/index.html
+++ b/index.html
@@ -84,9 +84,8 @@ margin-top: -40px;
 </style>
 </head>
 <body>
-<body background="back.jpg">
 <header style="margin-top: 0px";>
-<center><img src="d.PNG" width="300px" height="40px" alt"fashion"></center>
+<center><img src="d.png" width="300px" height="40px" alt"fashion"></center>
 <table height="100px">
  <div class="topnav">
   <a class="active" href="#HOME">HOME</a>
@@ -105,12 +104,12 @@ margin-top: -40px;
 </div>
 </table>
 <center><div class="w3-content w3-section" style="max-width:1500px">
-  <img class="mySlides" src="all.PNG" style="width:100%">
-  <img class="mySlides" src="trfafo.PNG" style="width:100%">
-  <img class="mySlides" src="trfa.PNG" style="width:100%">
-<img class="mySlides" src="tr.JPG" style="width:100%">
-<img class="mySlides" src="fa.PNG" style="width:100%">
-<img class="mySlides" src="fo.PNG" style="width:100%">
+  <img class="mySlides" src="all.png" style="width:100%">
+  <img class="mySlides" src="trfafo.png" style="width:100%">
+  <img class="mySlides" src="trfa.png" style="width:100%">
+<img class="mySlides" src="tr.jpg" style="width:100%">
+<img class="mySlides" src="fa.png" style="width:100%">
+<img class="mySlides" src="fo.png" style="width:100%">
 </div></center>
 <script>
 var myIndex = 0;
