--- a/fashion.html
+++ b/fashion.html
@@ -5,14 +5,14 @@
 <title> FASHION </title>
 <style>
 body {
-background-image: url("back.PNG");
+background-image: url("back.png");
     background-repeat: no-repeat;
     background-size: cover;
 }
 </style>
 </head>
 <body>
-<center><img src="hea.PNG" width="600px" height:"180px" alt="fashion"></div></center>
+<center><img src="hea.png" width="600px" height:"180px" alt="fashion"></div></center>
 <img src="fash1.PNG" style="float: left; width: 32%; margin-left: 1%; margin-top: 35px;" >
 <img src="fash2.PNG" style="float: left; width: 32%; margin-left: 1%; margin-top: 70px;" >
 <img src="fash3.PNG" style="float: left; width: 32%; margin-left: 1%; margin-top: 35px;" >
