--- a/food.html
+++ b/food.html
@@ -5,14 +5,14 @@
 <title> FOOD </title>
 <style>
 body {
-background-image: url("backg.JPG");
+background-image: url("backg.jpg");
     background-repeat: no-repeat;
     background-size: cover;
 }
 </style>
 </head>
 <body>
-<center><img src="head.PNG" width="600px" height:"180px" alt="fashion"></div></center>
+<center><img src="head.png" width="600px" height:"180px" alt="fashion"></div></center>
 <img src="foo1.PNG" style="float: left; width: 32%; margin-left: 1%; margin-top: 35px;" >
 <img src="foo2.PNG" style="float: left; width: 32%; margin-left: 1%; margin-top: 70px;" >
 <img src="foo3.PNG" style="float: left; width: 32%; margin-left: 1%; margin-top: 35px;" >
