--- a/travel.html
+++ b/travel.html
@@ -5,14 +5,14 @@
 <title> TRAVEL </title>
 <style>
 body {
-background-image: url("backgr.JPG");
+background-image: url("backgr.jpg");
     background-repeat: no-repeat;
     background-size: cover;
 }
 </style>
 </head>
 <body>
-<center><img src="heade.PNG" width="600px" height:"180px" alt="fashion"></div></center>
+<center><img src="heade.png" width="600px" height:"180px" alt="fashion"></div></center>
 <img src="tra1.PNG" style="float: left; width: 32%; margin-left: 1%; margin-top: 35px;" >
 <img src="tra2.PNG" style="float: left; width: 32%; margin-left: 1%; margin-top: 70px;" >
 <img src="tra3.PNG" style="float: left; width: 32%; margin-left: 1%; margin-top: 35px;" >
