--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@ margin-top: -40px;
   <a class="active" href="fashion.html">FASHION</a>
   <a class="active" href="food.html">FOOD</a>
   <a class="active" href="travel.html">TRAVEL</a>
-  <a class="active" href="blog.html">BLOG</a>
-  <a class="active" href="about.html">ABOUT</a>
+  <a class="active" href="http://www.marieclaire.co.uk/fashion/the-best-fashion-blogs-ever-69888">BLOG</a>
+  <a class="active" href="http://www.breakmystyle.com/">ABOUT</a>
   <a class="active" href="contact.html">CONTACT US</a>
 </div>
 <!-- Add font awesome icons -->
